ingress/service/deploy-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello

  template:
    metadata:
      labels:
        app: hello      # 라벨명
    spec:
      containers:
      - name: sales
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
  namespace: default   # 네임스페이스 지정(기본 default)
spec:
  type: NodePort
  ports:
  - nodePort: 30002      # 노드포트
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello
