ingress/service/deploy-lb-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-test
  labels:
    app: lb-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lb-test

  template:
    metadata:
      labels:
        app: lb-test      # 라벨명
    spec:
      containers:
      - name: lb-test-web
        image: thekoguryo/nginx-hello:blue
#        image: gcr.io/google-samples/kubernetes-bootcamp:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lb-test
spec:
  type: LoadBalancer
  selector:
    app: lb-test
  loadBalancerIP: 10.178.0.7
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
