ingress/service/deploy-zabbix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix
  labels:
    app: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix
  template:
    metadata:
      labels:
        app: zabbix    # 라벨명
    spec:
      containers:
      - name: zabbix
        image: alpinelinux/zabbix-ci:6.4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zabbix
  name: zabbix
  namespace: default   # 네임스페이스 지정(기본 default)
spec:
  type: NodePort
  ports:
  - nodePort: 30003      # 노드포트
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: zabbix
