ingress/service/ingress-ssl80.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl80-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: worker1.innerinfo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssl80
            port:
              number: 80
