ingress/service/ingress-zabbix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-ingress
spec:
  ingressClassName: zabbix
  rules:
  - host: zabbix.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:
            port:
              number: 80
