ingress/service/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nihao-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: master1.innerinfo.net
    http:
      paths:
      - path: /nihao
        pathType: Prefix
        backend:
          service:
            name: nihao
            port:
              number: 80
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
